--- a/config/theme.css
+++ b/config/theme.css
@@ -1,7 +1,7 @@
 :root {
   --primary: #0f0e03;
   --primary-text: #d3cf08;
-  --secondary: #034709;
+  --secondary: #24e62e;
   --secondary-text: #ffffff;
   --accent: #505050;
   --accent-text: #ffffff;
